--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -35,7 +35,6 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  height: 20%;
   position: absolute;
   padding: 1rem;
 }
@@ -53,36 +52,85 @@ body {
 #info {
   -webkit-perspective: 1000px;
           perspective: 1000px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 1fr 3fr 1fr;
-      grid-template-rows: 1fr 3fr 1fr;
-  grid-gap: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
-  padding: 1rem;
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   width: 80%;
   height: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 310px;
+}
+
+#info div {
+  margin: auto;
+}
+
+#info .card {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   -webkit-box-shadow: 16px 16px 32px #cacaca, -9px -9px 32px #ffffff;
           box-shadow: 16px 16px 32px #cacaca, -9px -9px 32px #ffffff;
+  background: white;
 }
 
-#info #facinfo {
+#info .front,
+#info .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1rem;
+}
+
+#info .back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+#info #facinfo,
+#info #nextfacinfo {
   color: black;
   margin: 0.5rem;
+  color: #4869df;
 }
 
-#info #subinfo {
-  color: rgba(72, 105, 223, 0.9);
+#info #subinfo,
+#info #nextsubinfo {
   font-weight: 500;
 }
 
@@ -92,7 +140,40 @@ body {
   border: none;
   border-radius: 6px;
   font-size: 1.1rem;
+  height: 3rem;
+  width: 10rem;
   -webkit-box-shadow: 0px 4px 12px -2px #474747;
           box-shadow: 0px 4px 12px -2px #474747;
+}
+
+.rotateddiv {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+#footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem 0;
+}
+
+#footer p {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+#footer p span {
+  color: #4869df;
 }
 /*# sourceMappingURL=style.css.map */
