--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  
 }
 #head {
   display: flex;
@@ -79,16 +80,6 @@ body {
   #nextsubinfo {
     font-weight: 500;
   }
-  button {
-    color: #fff;
-    background-color: #4869df;
-    border: none;
-    border-radius: 6px;
-    font-size: 1.1rem;
-    height: 3rem;
-    width: 10rem;
-    box-shadow: 0px 4px 12px -2px #474747;
-  }
 }
 .rotateddiv {
   transform: rotateY(180deg);
@@ -100,6 +91,7 @@ body {
   left: 0;
   display: flex;
   text-align: center;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 1rem 0;
@@ -110,4 +102,20 @@ body {
       color: #4869df;
     }
   }
+}
+.d-none{
+  display: none;
+}
+.d-flex{
+  display: flex;
+}
+button {
+  color: #fff;
+  background-color: #4869df;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  height: 3rem;
+  width: 10rem;
+  box-shadow: 0px 4px 12px -2px #474747;
 }
