--- a/style.css
+++ b/style.css
@@ -134,18 +134,6 @@ body {
   font-weight: 500;
 }
 
-#info button {
-  color: #fff;
-  background-color: #4869df;
-  border: none;
-  border-radius: 6px;
-  font-size: 1.1rem;
-  height: 3rem;
-  width: 10rem;
-  -webkit-box-shadow: 0px 4px 12px -2px #474747;
-          box-shadow: 0px 4px 12px -2px #474747;
-}
-
 .rotateddiv {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
@@ -160,6 +148,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -176,5 +168,27 @@ body {
 #footer p span a, #footer p span {
   text-decoration: none;
   color: #4869df;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+button {
+  color: #fff;
+  background-color: #4869df;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  height: 3rem;
+  width: 10rem;
+  -webkit-box-shadow: 0px 4px 12px -2px #474747;
+          box-shadow: 0px 4px 12px -2px #474747;
 }
 /*# sourceMappingURL=style.css.map */
